Fix issues with scroll jumping on Create stepper

--- a/Sortify/ClientApp/src/app/components/stepper/steps/creation-step/creation-step.component.sass
+++ b/Sortify/ClientApp/src/app/components/stepper/steps/creation-step/creation-step.component.sass
@@ -173,3 +173,9 @@ h1
 .numbering-style-separator
   padding: 0 4px
   color: #ffffff80
+
+
+// description
+
+.description
+  resize: none
